# scmscx.com

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  bwrender.Dockerfile  compose.yaml  eslint.config.mjs  flake.nix  index.html  package-lock.json  package.json  rust-toolchain.toml  rustfmt.toml  tsconfig.json  vite.config.ts  vite.pages.config.ts  wrangler.toml
.cargo/: config.toml  mutants.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/actions/mutants-summary/: action.yml
.github/actions/sccache-stats/: action.yml
.github/actions/setup-build-env/: action.yaml
.github/workflows/: ci.yaml  deploy-pages.yml  deploy-ppe.yml  mutants.yaml  pr-ci.yaml  push-scmscx.com.yaml
app/: global.scss  index.tsx  michroma.css  nanum_gothic.css  reset.scss
app/modules/: ColoredText.tsx  CoolBackground.module.scss  CoolBackground.tsx  MapImg.module.scss  MapImg.tsx  MinimapHover.module.scss  MinimapHover.tsx  MinimapImg.module.scss  MinimapImg.tsx  Navbar.module.scss  Navbar.tsx  context.tsx  language.tsx
app/pages/: About.module.scss  About.tsx  Home.module.scss  Home.tsx  Login.module.scss  Login.tsx  Map.module.scss  Map.tsx  Moderation.module.scss  Moderation.tsx  Search.module.scss  Search.tsx  Upload.module.scss  Upload.tsx  User.module.scss  User.tsx
app/util/: sc.ts  util.ts
app/web/public/: _redirects  _routes.json  map-redirect.html  replay-redirect.html  robots.txt
app/web/uiv2/: header.hbs  uiv2-about.hbs  uiv2-index.hbs  uiv2-login.hbs  uiv2-map.hbs  uiv2-moderation.hbs  uiv2-search.hbs  uiv2-upload.hbs  uiv2-user.hbs
ci-runner/: Dockerfile  startup.sh
crates/backblaze/: Cargo.toml
crates/backblaze/src/: api.rs  old.rs  test.rs
crates/bwcommon/: Cargo.toml
crates/bwcommon/src/: bloom.rs  common.rs  denorm.rs  id.rs  lib.rs  logging.rs
crates/bwmap/: Cargo.toml
crates/bwmap/src/: parsed_chk.rs  riff.rs  trig.rs  util.rs
crates/bwmap/src/chk/: chk_dd2.rs  chk_dim.rs  chk_era.rs  chk_isom.rs  chk_ive2.rs  chk_iver.rs  chk_mask.rs  chk_mbrf.rs  chk_mrgn.rs  chk_mtxm.rs  chk_ptec.rs  chk_ptex.rs  chk_puni.rs  chk_pupx.rs  chk_sprp.rs  chk_str.rs  chk_strx.rs  chk_swnm.rs  chk_tecs.rs  chk_tecx.rs  chk_thg2.rs  chk_tile.rs  chk_trig.rs  chk_type.rs  chk_unis.rs  chk_unit.rs  chk_upgr.rs  chk_upgs.rs  chk_upgx.rs  chk_uprp.rs  chk_upus.rs  chk_vcod.rs  chk_ver.rs  chk_wav.rs
crates/bwmap/src/test/: base.rs  bw.rs  bwremaster.rs  general.rs  hybrid.rs  remasterhybrid.rs  util.rs
crates/bwmapserver/: Cargo.toml
crates/bwmapserver/src/: actix.rs  db.rs  gsfs.rs  hacks.rs  main.rs  pumpers.rs  ratelimit.rs  search.rs  search2.rs  server.rs  state.rs  static_pages.rs  tests.rs  util.rs  webutil.rs
crates/bwmapserver/src/api/: bulkupload.rs  change_password.rs  change_username.rs  chk.rs  core.rs  flags.rs  login.rs  logout.rs  mod.rs  random.rs  register.rs  similar_maps.rs  sitemap.rs  tests.rs
crates/bwmapserver/src/api/uiv2/: filenames.rs  filenames2.rs  logout.rs  map_info.rs  map_meta.rs  mod.rs  replays.rs  search.rs  timestamps.rs  units.rs  upload.rs
crates/bwmapserver/src/middleware/: cachehtml.rs  language.rs  metrics.rs  mod.rs  postgreslogging.rs  traceid.rs  trackinganalytics.rs  usersession.rs
crates/bwmapserver/src/ssr/: about.rs  allmaps.rs  change_password.rs  change_username.rs  index.rs  login.rs  map.rs  mod.rs  recent.rs  register.rs  replay.rs  search.rs  search2.rs  upload_map.rs  upload_replay.rs  user.rs  viewer.rs
crates/bwmapserver/src/uiv2/: index.rs
crates/bwmapserver/tests/e2e/: e2e.rs  harness.rs  map.rs
crates/bwminimaprender/: Cargo.toml
crates/bwminimaprender/src/: minimap.rs  test.rs
crates/bwmpq/: Cargo.toml
crates/bwmpq/src/: mpq.rs  test.rs
crates/bwrender/: Cargo.toml
crates/bwrender/src/: config.rs  db.rs  encode.rs  main.rs  render.rs
crates/chkdraft-bindings/: Cargo.toml  build.rs
crates/chkdraft-bindings/src/: chkdraft_wrapper.cpp  chkdraft_wrapper.h  lib.rs
crates/common/: Cargo.toml
crates/common/src/: common.rs  gsfs.rs  lib.rs  telemetry.rs
crates/common/src/middleware/: cachehtml.rs  mod.rs  postgreslogging.rs  traceid.rs  trackinganalytics.rs
crates/compact_enc_det-bindings/: Cargo.toml  build.rs
crates/stormlib-bindings/: Cargo.toml  build.rs
crates/stormlib-bindings/src/: bindings.rs
crates/uchardet-bindings/: Cargo.toml  build.rs
functions/: _middleware.ts  _origin.ts  _shared.ts  tsconfig.json
functions/map/: [id].ts
functions/search/: [query].ts
postgres/: 00-init.sh  Dockerfile  postgresql.conf
render/: Dockerfile
