[workspace]
resolver = "2"
members = ["crates/*"]
default-members = ["crates/*"]

#
# Release
#
[profile.release]
opt-level = 3
debug = 1
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "unwind"
incremental = false
codegen-units = 1
rpath = false
strip = "none"

[profile.release.package."*"]
opt-level = 3
debug = 0
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 1
strip = "symbols"

#
# Profiling
#
[profile.profile]
inherits = "release"
debug = 2
strip = "none"

[profile.profile.package."*"]
inherits = "release"
debug = 2
strip = "none"

#
# Debug
#
[profile.dev]
opt-level = 0
debug = 2
debug-assertions = false
overflow-checks = true
lto = "off"
incremental = true
codegen-units = 2048

[profile.dev.package."*"]
opt-level = 2
debug = 2
debug-assertions = true
overflow-checks = true
incremental = true
codegen-units = 2048

# [profile.dev.package.adler2]
# opt-level = 2
# debug = 2
# debug-assertions = true
# overflow-checks = false
# incremental = true
# codegen-units = 2048
