[package]
name = "backblaze"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["rt-multi-thread","tracing","full"] }
tokio-util = { version = "*", features = ["codec"] }
anyhow = "*"
reqwest = { version = "*", default-features = false, features = ["json", "stream", "http2", "h3", "rustls-tls"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
bytes = "*"
futures-core = "*"
sha1 = "*"
thiserror = "*"
async-stream = "*"
futures = "*"
pin-project = "*"

[dev-dependencies]
uuid = { version = "*", features = ["v4"] }
assert_matches = "*"
