[package]
name = "bwcommon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backblaze = { path = "../backblaze" }
bwmap = { path = "../bwmap" }
bwmpq = { path = "../bwmpq" }
bwminimaprender = { path = "../bwminimaprender" }

actix-web = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
anyhow = "*"
# r2d2_postgres = "*"
image = { version = "*", default-features = false, features = ["png"] }
reqwest = { version = "*", default-features = false, features = ["json", "stream", "blocking", "http2", "rustls-tls"] }
uuid = { version = "*", features = ["v4"] }
handlebars = "*"
walkdir = "*"
actix-multipart = "*"
tracing = "*"
rand = "*"
phf = { version = "*", features = ["macros"] }
crc = "*"
bb8-postgres = "*"
awc = "*"

tokio = { version = "*", features = ["full"] }
futures-util = "*"
sha2 = "*"

zstd = "*"

fnv = "*"

[dev-dependencies]
quickcheck = "*"
quickcheck_macros = "*"
