[package]
name = "bwcommon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backblaze = { path = "../backblaze" }
bwmap = { path = "../bwmap" }
bwmpq = { path = "../bwmpq" }
bwminimaprender = { path = "../bwminimaprender" }

actix-web = "4.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
anyhow = "1.0.99"
# r2d2_postgres = "*"
image = { version = "0.25.6", default-features = false, features = ["png"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "stream", "blocking", "http2", "rustls-tls"] }
uuid = { version = "1.18.0", features = ["v4"] }
handlebars = "6.3.2"
walkdir = "2.5.0"
actix-multipart = "0.7.2"
tracing = "0.1.41"
rand = "0.9.3"
phf = { version = "0.13.1", features = ["macros"] }
crc = "3.3.0"
bb8-postgres = "0.9.0"
awc = "3.7.0"

tokio = { version = "1.47.1", features = ["full"] }
futures-util = "0.3.31"
sha2 = "0.10.9"

zstd = "0.13.3"

fnv = "1.0.7"

[dev-dependencies]
quickcheck = "1.1.0"
quickcheck_macros = "1.2.0"

[lints]
workspace = true
