[package]
name = "bwmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["full", "uchardet-bindings", "compact_enc_det-bindings"]
full = []

[dependencies]
uchardet-bindings = { path = "../uchardet-bindings", optional = true }
compact_enc_det-bindings = { path = "../compact_enc_det-bindings", optional = true }

serde = { version = "1.0.219", features = ["derive"] }
encoding_rs = "0.8.35"
anyhow = { version = "1.0.99", features = ["backtrace"] }

scopeguard = "1.2.0"
phf = { version = "0.10.1", features = ["macros"] }

tracing = "0.1.41"


[dev-dependencies]

reqwest = { version = "0.12.4", default-features = false, features = ["json", "http2", "rustls-tls"] }
tokio = { version = "1.47.1", features = ["full"] }
futures = { version = "0.3.31" }
sha2 = "0.10.9"

async-stream = "0.3.6"

[lints]
workspace = true
