[package]
name = "scmscx-com"
version = "0.1.0"
edition = "2021"

[dependencies]

# bwreplay = { path = "../bwreplay" }
bwmap = { path = "../bwmap" }
bwcommon = { path = "../bwcommon" }
common = { path = "../common" }
backblaze = { path = "../backblaze" }
bwminimaprender = { path = "../bwminimaprender" }
bwmpq = { path = "../bwmpq" }

cached = { version = "0.56.0", features = ["async", "proc_macro"] }

#itertools = "*"
base64 = "0.22.1"
handlebars = { version = "6.3.2", features = ["dir_source"] }
lazy_static = "1.5.0"
#lru = "*"
# rusqlite = "0.24.2"
# rocket = { version = "" }
# rocket_contrib = ""
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio-util = { version = "0.7.16", features = ["codec"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread","tracing","full"] }
#tokio = { version = "*", features = ["rt-multi-thread"] }
#console-subscriber = "*"
sha2 = "0.10.9"
sha1 = "0.10.6"
argon2 = "0.5.3"
governor = "0.10.4"
# tempfile = "*"
# url = "*"
encoding_rs = "0.8.35"
# widestring = ""
walkdir = "2.5.0"
# slog = ""
# sloggers = ""
# rocket-slog = ""
image = { version = "0.25.6", default-features = false, features = ["png"] }
# png = { version = "*", optional = true }
# nude = ""
regex = "1.11.2"
anyhow = "1.0.99"
# axum stack
axum = { version = "0.8.9", features = ["macros"] }
axum-extra = { version = "0.12.6", features = ["cookie"] }
tower = "0.5.3"
tower-http = { version = "0.7.0", features = [
    "fs",
    "compression-br",
    "compression-gzip",
    "compression-deflate",
    "normalize-path",
    "trace",
] }
tower_governor = { version = "0.8.0", default-features = false, features = ["axum"] }
http = "1"
http-body-util = "0.1"
#env_logger = "*"
#mime = "*"
# time = "0.2.27"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "stream", "http2", "rustls-tls"] }
futures-core = "0.3.31"
futures-util = "0.3.31"
bytes = "1.10.1"
async-stream = "0.3.6"

# actix-web-middleware-redirect-scheme = ""
futures = "0.3.31"
# reqwest = "*"
uuid = { version = "1.18.0", features = ["v4"] }
# r2d2 = "*"
# r2d2_sqlite = ""
# r2d2_postgres = "*"
bb8-postgres = "0.9.0"
# Telemetry: the register_*! macros expand to code that names `prometheus_client`
# directly, so it must be a direct dependency here (not just via `common`).
prometheus-client = "0.24"
# bitreader = ""
# flate2 = "*"
# hex = "*"
zstd = "0.13.3"

log = "0.4.27"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["registry", "env-filter"] }
tracing-log = "0.2.0"

rand = "0.9.3"

# Opt-in flag for the end-to-end suite. The e2e tests need a live Postgres whose
# address arrives via E2E_PG_* env vars (set only by `make e2e` / `make mutants`),
# so the target is gated behind this feature. That keeps `cargo test --all-targets`
# (i.e. `make test`) from building and running the e2e target — Cargo silently
# skips targets whose `required-features` aren't enabled — instead of it panicking
# on the missing env vars.
[features]
e2e = []

# End-to-end suite: the tests live in tests/e2e/e2e.rs with the harness alongside
# them in tests/e2e/harness.rs (a submodule, not its own test binary). The target
# is declared explicitly because Cargo only auto-discovers tests/*.rs, and gated
# behind the `e2e` feature so it runs only via `make e2e` / `make mutants`.
[[test]]
name = "e2e"
path = "tests/e2e/e2e.rs"
required-features = ["e2e"]

[dev-dependencies]
# E2E tests (tests/e2e/): an async HTTP client + runtime to drive the server, and
# tokio-postgres to create a per-test template-copied database.
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["macros", "rt", "time", "sync"] }
tokio-postgres = "0.7.13"
# Re-hash a downloaded CHK blob to prove the /api/chk/{hash} round-trip.
sha2 = "0.10.9"
# Clear FD_CLOEXEC on the pre-bound listener sockets handed to the server child.
libc = "0.2"


#  ├─── "actix-session"
#  ├─── "actix-web-middleware-redirect-scheme"
#  ├─── "bitreader"
#  ├─── "rustls-pemfile"
#  └─── "widestring"

#  ├─── "rocket"
#  ├─── "rocket-slog"
#  ├─── "rocket_contrib"
#  ├─── "slog"
#  └─── "sloggers"

[lints]
workspace = true
