[package]
name = "bwminimaprender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.99"
image = { version = "0.25.6", default-features = false, features = ["png"] }
lazy_static = "1.5.0"
tracing = "0.1.41"

[lints]
workspace = true
