[package]
name = "bwmpq"
version = "0.1.0"
edition = "2021"

[dependencies]
stormlib-bindings = { path = "../stormlib-bindings" }

anyhow = { version = "1.0.99", features = ["backtrace"] }
scopeguard = "1.2.0"
lazy_static = "1.5.0"
tracing = "0.1.41"
uuid = { version = "1.18.0", features = ["v4"] }

[dev-dependencies]
reqwest = { version = "0.12.24", default-features = false, features = ["json", "http2", "rustls-tls"] }
tokio = { version = "1.47.1", features = ["full"] }
sha2 = "0.10.9"
futures-util = "0.3.31"

[lints]
workspace = true
