[package]
name = "bwrender"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bwrender"
path = "src/main.rs"

[dependencies]
# Local crates
chkdraft-bindings = { path = "../chkdraft-bindings" }
common = { path = "../common" }
backblaze = { path = "../backblaze" }
bwmpq = { path = "../bwmpq" }

# Async runtime
tokio = { version = "1.47.1", features = ["rt-multi-thread", "full"] }

# Database
bb8-postgres = "0.9.0"

# HTTP client
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls"] }

# Error handling
anyhow = "1.0.99"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-log = "0.2.0"
log = "0.4.27"

# Image encoding
webp = "0.3.1"
image = { version = "0.25.6", default-features = false, features = ["png"] }

# Utilities
uuid = { version = "1.18.0", features = ["v4"] }
futures-util = "0.3.31"
async-channel = "2.5.0"

[dev-dependencies]

[lints]
workspace = true
